unificacion archivos scss

--- a/sass/global/_textos.scss
+++ b/sass/global/_textos.scss
@@ -1,3 +1,6 @@
+// FUENTE TIPOGRAFICA DE GOOGLEFONT
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500&display=swap");
+
 // Mixin para text-transform
 @mixin text-transform($transform) {
   text-transform: $transform;
