--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -12,7 +12,7 @@
 
 /* Importando estilos en páginas */
 @import "pages/index";
-@import "pages/instrumentos";
+@import "pages/canto-piano-violin";
 @import "pages/contacto";
 
 
