--- a/css/styles.css
+++ b/css/styles.css
@@ -350,11 +350,10 @@ footer h4 {
 /* Importando estilos en páginas */
 main#index {
   padding-top: 1.8rem;
-  background: linear-gradient(var(--color-fondo-op100), var(--color-fondo-op50)), url(../assets/img/background/1.webp);
+  background: linear-gradient(var(--color-fondo-op100), var(--color-fondo-op50)), url("../assets/img/background/1.webp");
   background-size: cover;
   background-position: center;
 }
-
 main#index .section1 {
   width: 100%;
   max-width: 1000px;
@@ -364,7 +363,6 @@ main#index .section1 {
   padding-left: 1rem;
   margin: auto;
 }
-
 main#index .section2 {
   width: 100%;
   max-width: 1000px;
@@ -395,7 +393,6 @@ main#index .section2 .divisor .divisor-texto h3 {
   margin: auto;
   padding-bottom: 10px;
 }
-
 main#index .section3 {
   width: 100%;
   padding-left: 1rem;
@@ -412,7 +409,9 @@ main#index .section3 .divisor1 {
   flex-direction: column;
   margin: auto;
   padding-top: 4rem;
+  padding-right: 0;
   padding-bottom: 4rem;
+  padding-left: 0;
 }
 main#index .section3 .divisor1 h2 {
   padding: 1rem;
@@ -441,17 +440,14 @@ main#index .section3 .divisor3 .mapa {
 }
 
 main.piano {
-  background: linear-gradient(var(--color-fondo-op100), var(--color-fondo-op50)), url(../assets/img/background/1.webp);
+  background: linear-gradient(var(--color-fondo-op100), var(--color-fondo-op50)), url("../assets/img/background/1.webp");
 }
-
 main.canto {
-  background: linear-gradient(var(--color-fondo-op100), var(--color-fondo-op50)), url(../assets/img/background/4.webp);
+  background: linear-gradient(var(--color-fondo-op100), var(--color-fondo-op50)), url("../assets/img/background/4.webp");
 }
-
 main.violin {
-  background: linear-gradient(var(--color-fondo-op100), var(--color-fondo-op50)), url(../assets/img/background/3.webp);
+  background: linear-gradient(var(--color-fondo-op100), var(--color-fondo-op50)), url("../assets/img/background/3.webp");
 }
-
 main#musica {
   background-size: cover;
   background-position: center;
@@ -512,7 +508,7 @@ main#musica .divisor-2 .section4 a {
 }
 
 main.contacto {
-  background: linear-gradient(var(--color-fondo-op100), var(--color-fondo-op50)), url(../assets/img/background/2.webp);
+  background: linear-gradient(var(--color-fondo-op100), var(--color-fondo-op50)), url("../assets/img/background/2.webp");
   background-size: cover;
   background-position: center;
   padding-top: 3rem;
