--- a/sass/pages/_canto-piano-violin.scss
+++ b/sass/pages/_canto-piano-violin.scss
@@ -1,20 +1,8 @@
 @mixin background-image($url) {
-  background: linear-gradient(var(--color-fondo-op100), var(--color-fondo-op50)), url($url);
+  background: linear-gradient(#{$color-fondo-op100}, #{$color-fondo-op50}), url($url);
 }
 
 main {
-  &.piano {
-    @include background-image("../assets/img/background/1.webp");
-  }
-
-  &.canto {
-    @include background-image("../assets/img/background/4.webp");
-  }
-
-  &.violin {
-    @include background-image("../assets/img/background/3.webp");
-  }
-
   &#musica {
     background-size: cover;
     background-position: center;
