--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,6 +1,7 @@
 /* Importando estilos universales */
 @import "global/universales";
 @import "global/animaciones";
+@import "global/colores";
 @import "../css/colores";
 @import "global/textos";
 
