modo light index + mantener modo elegido toggle

--- a/sass/global/_colores.scss
+++ b/sass/global/_colores.scss
@@ -136,7 +136,7 @@ body.light-mode {
    }
 
    main {
-    &#index {
+    &.main {
     @include background-image("../assets/img/background/1.webp");
    }
   
