--- a/sass/global/_textos.scss
+++ b/sass/global/_textos.scss
@@ -7,6 +7,7 @@
   src: url('../../assets/fonts/Roboto-Light.woff') format('truetype');
   font-weight: 300;
   font-style: normal;
+  font-display: swap;
 }
 
 /* Importa y define la fuente Roboto Medium */
@@ -15,6 +16,7 @@
   src: url('../../assets/fonts/Roboto-Medium.woff') format('truetype');
   font-weight: 500; /* Ajusta este valor según el peso correcto de la fuente */
   font-style: normal;
+  font-display: swap;
 }
 
 /* Importa y define la fuente Roboto Regular */
@@ -23,6 +25,7 @@
   src: url('../../assets/fonts/Roboto-Regular.woff') format('truetype');
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 // Mixin para text-transform
