--- a/sass/global/_textos.scss
+++ b/sass/global/_textos.scss
@@ -1,5 +1,4 @@
-// FUENTE TIPOGRAFICA DE GOOGLEFONT
-// @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500&display=swap");
+// FUENTE TIPOGRAFICA
 
 /* Importa y define la fuente Roboto Light */
 @font-face {
