--- a/sass/global/_textos.scss
+++ b/sass/global/_textos.scss
@@ -3,7 +3,7 @@
 /* Importa y define la fuente Roboto Light */
 @font-face {
   font-family: 'Roboto Light';
-  src: url('../../assets/fonts/Roboto-Light.woff') format('truetype');
+  src: url('../../assets/fonts/Roboto-Light.woff') format('woff');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -12,7 +12,7 @@
 /* Importa y define la fuente Roboto Medium */
 @font-face {
   font-family: 'Roboto Medium';
-  src: url('../../assets/fonts/Roboto-Medium.woff') format('truetype');
+  src: url('../../assets/fonts/Roboto-Medium.woff') format('woff');
   font-weight: 500; /* Ajusta este valor según el peso correcto de la fuente */
   font-style: normal;
   font-display: swap;
@@ -21,7 +21,7 @@
 /* Importa y define la fuente Roboto Regular */
 @font-face {
   font-family: 'Roboto';
-  src: url('../../assets/fonts/Roboto-Regular.woff') format('truetype');
+  src: url('../../assets/fonts/Roboto-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
