--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@ iframe.mapa,
 .fade-in {
   opacity: 0;
   visibility: hidden;
-  animation: fadeIn 2s forwards;
+  animation: fadeIn 1s forwards;
 }
 
 .section1,
@@ -79,17 +79,17 @@ iframe.mapa,
 
 .section2,
 .fade2 {
-  animation-delay: 0.8s;
+  animation-delay: 0.6s;
   animation-fill-mode: forwards;
 }
 
 .section3,
 .fade3 {
-  animation-delay: 1.2s;
+  animation-delay: 0.8s;
   animation-fill-mode: forwards;
 }
 
-main#index {
+main.principal {
   background: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0.5)), url("../assets/img/background/1.webp");
   background-size: cover;
   background-position: center;
@@ -141,7 +141,7 @@ main.contacto .contenedor .section3 form button {
 
 .navbar-brand,
 .navbar-brand:visited,
-.fas.fa-bars,
+.navbar-toggler svg,
 .navbar-nav a,
 h1,
 h2,
@@ -158,7 +158,7 @@ main.contacto .contenedor .section3 form button {
 .toggleDark,
 .toggleLight:hover,
 .navbar-brand:hover,
-.fas.fa-bars:hover,
+.navbar-toggler svg:hover,
 footer div#redes ul li a:hover {
   color: rgb(225, 202, 83);
 }
@@ -193,7 +193,7 @@ main#musica .divisor-2 .section4 a {
   color: rgb(83, 152, 225);
 }
 
-body.light-mode main#index {
+body.light-mode main.principal {
   background: linear-gradient(rgba(220, 220, 220, 0.9), rgba(220, 220, 220, 0.5)), url("../assets/img/background/1.webp");
   background-size: cover;
   background-position: center;
@@ -246,7 +246,7 @@ body.light-mode main.contacto {
 }
 body.light-mode .navbar-brand,
 body.light-mode .navbar-brand:visited,
-body.light-mode .fas.fa-bars,
+body.light-mode .navbar-toggler svg,
 body.light-mode .navbar-nav a,
 body.light-mode h1,
 body.light-mode h2,
@@ -262,7 +262,7 @@ body.light-mode main.contacto .contenedor .section3 form button {
 body.light-mode .toggleDark,
 body.light-mode .toggleLight:hover,
 body.light-mode .navbar-brand:hover,
-body.light-mode .fas.fa-bars:hover,
+body.light-mode .navbar-toggler svg:hover,
 body.light-mode footer div#redes ul li a:hover {
   color: rgb(83, 152, 225);
 }
@@ -293,114 +293,7 @@ body.light-mode .toggleLight {
   color: rgb(83, 152, 225);
 }
 
-/*  
-
-
-:root {
-  --color-primero: rgb(27, 26, 25);
-  --color-segundo: rgb(234, 234, 234);
-  --color-tercero: rgb(225, 202, 83);
-  --color-cuarto: rgb(83, 152, 225);
-  --color-fondo-op50: rgba(0, 0, 0, 0.5);
-  --color-fondo-op100: rgb(0, 0, 0);
-}
-
-
-#toggleMode:checked ~ header,
-#toggleMode:checked ~ main,
-#toggleMode:checked ~ footer {
-  --color-primero: rgb(234, 234, 234);
-  --color-segundo: rgb(27, 26, 25);
-  --color-tercero: rgb(83, 152, 225);
-  --color-fondo-op50: rgba(220, 220, 220, 0.5);
-  --color-fondo-op100: rgb(220, 220, 220, 0.9);
-}
-
-
-
-.navbar-toggler,
-main .divisor2 .card a.link:hover,
-main#musica .divisor-2 .section4 a:hover,
-main.contacto .contenedor .section3 form button:hover,
-main.contacto .contenedor .section3 form input:hover,
-main.contacto .contenedor .section3 form textarea:hover,
-header a[aria-current="page"],
-.nav-link:hover {
-  color: var(--color-primero);
-}
-
-header nav.navbar,
-footer,
-.main .section3 .divisor1 h2,
-.main .divisor2 .card a.link,
-main#musica .divisor-2 .section4 a,
-main.contacto .contenedor .section3 form button {
-  background-color: var(--color-primero);
-}
-
-.main .section3 .divisor3 .mapa {
-  border: solid 1px var(--color-primero);
-}
-
-
-.navbar-brand,
-.navbar-brand:visited,
-.fas.fa-bars,
-.navbar-nav a,
-h1,
-h2,
-h3,
-h4,
-p,
-a,
-.main .section3 .divisor1 h2,
-main.contacto .contenedor .section3 form label,
-main.contacto .contenedor .section3 form button {
-  color: var(--color-segundo);
-}
-
-
-.toggleDark,
-.toggleLight:hover,
-.navbar-brand:hover,
-.fas.fa-bars:hover,
-footer div#redes ul li a:hover {
-  color: var(--color-tercero);
-}
-
-main .divisor2 .card a.link:hover,
-main#musica .divisor-2 .section4 a:hover,
-main.contacto .contenedor .section3 form button:hover,
-main.contacto .contenedor .section3 form input:hover,
-main.contacto .contenedor .section3 form textarea:hover,
-a[aria-current="page"],
-.nav-link:hover {
-  background-color: var(--color-tercero);
-}
-
-.main .section3 .divisor1 h2,
-.main .section3 .divisor2 h3,
-.main .section3 .divisor2 img,
-.main .divisor2 .card a.link,
-main#musica .divisor-1 section div img,
-main#musica .divisor-2 .section4 img,
-main.contacto .contenedor .section3 form button,
-main#musica .divisor-2 .section4 a {
-  border: solid 1px var(--color-tercero);
-}
-
-.checkbox input#checkbox {
-  accent-color: var(--color-tercero);
-}
-
-
-.toggleDark:hover,
-.toggleLight {
-  color: var(--color-cuarto);
-}
-
-
-*/
+/* ----------------- FUENTE TIPOGRAFICA DE GOOGLEFONT----------------- */
 h1, h2, h3 {
   text-transform: uppercase;
 }
@@ -461,7 +354,7 @@ a {
 .toggleLight {
   cursor: pointer;
   position: fixed;
-  top: 17px;
+  top: 15px;
   left: 10px;
   z-index: 9999;
 }
@@ -870,11 +763,11 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
     margin: auto;
   }
   main#musica .fade1 {
-    animation-delay: 0.8s;
+    animation-delay: 0.6s;
     animation-fill-mode: forwards;
   }
   main#musica .fade2 {
-    animation-delay: 1.2s;
+    animation-delay: 0.8s;
     animation-fill-mode: forwards;
   }
   main#musica .fade3 {
