--- a/sass/global/_textos.scss
+++ b/sass/global/_textos.scss
@@ -1,31 +1,33 @@
 // FUENTE TIPOGRAFICA
+/* ----------------- FUENTE TIPOGRAFICA DE GOOGLEFONT----------------- */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500&display=swap");
 
-/* Importa y define la fuente Roboto Light */
-@font-face {
-  font-family: 'Roboto Light';
-  src: url('../../assets/fonts/Roboto-Light.woff') format('woff');
-  font-weight: 300;
-  font-style: normal;
-  font-display: swap;
-}
+// /* Importa y define la fuente Roboto Light */
+// @font-face {
+//   font-family: 'Roboto Light';
+//   src: url('../../assets/fonts/Roboto-Light.woff') format('woff');
+//   font-weight: 300;
+//   font-style: normal;
+//   font-display: swap;
+// }
 
-/* Importa y define la fuente Roboto Medium */
-@font-face {
-  font-family: 'Roboto Medium';
-  src: url('../../assets/fonts/Roboto-Medium.woff') format('woff');
-  font-weight: 500; /* Ajusta este valor según el peso correcto de la fuente */
-  font-style: normal;
-  font-display: swap;
-}
+// /* Importa y define la fuente Roboto Medium */
+// @font-face {
+//   font-family: 'Roboto Medium';
+//   src: url('../../assets/fonts/Roboto-Medium.woff') format('woff');
+//   font-weight: 500; /* Ajusta este valor según el peso correcto de la fuente */
+//   font-style: normal;
+//   font-display: swap;
+// }
 
-/* Importa y define la fuente Roboto Regular */
-@font-face {
-  font-family: 'Roboto';
-  src: url('../../assets/fonts/Roboto-Regular.woff') format('woff');
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
+// /* Importa y define la fuente Roboto Regular */
+// @font-face {
+//   font-family: 'Roboto';
+//   src: url('../../assets/fonts/Roboto-Regular.woff') format('woff');
+//   font-weight: 400;
+//   font-style: normal;
+//   font-display: swap;
+// }
 
 // Mixin para text-transform
 @mixin text-transform($transform) {
