--- a/scss/global/_animaciones.scss
+++ b/scss/global/_animaciones.scss
@@ -40,14 +40,13 @@ main {
 @keyframes show {
   from {
     opacity: 0;
-    transform: scale(0.25);
+    scale: 25%;
   }
   to {
     opacity: 1;
-    transform: scale(1);
+    scale: 100%;
   }
 }
-
 
 // Estilos para img, p, iframe.mapa
 img,
