--- a/css/styles.css
+++ b/css/styles.css
@@ -29,11 +29,11 @@ main iframe.mapa:hover {
 @keyframes show {
   from {
     opacity: 0;
-    scale: 25%;
+    transform: scale(0.25);
   }
   to {
     opacity: 1;
-    scale: 100%;
+    transform: scale(1);
   }
 }
 img,
