prueba bootstrap compilacion

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,5 +1,6 @@
 // Importando utilities
 @import "utilities/reset";
+@import "utilities/bootstrap";
 
 // Importando global
 @import "global/animaciones";
