--- a/css/styles.css
+++ b/css/styles.css
@@ -28,12 +28,12 @@ main iframe.mapa:hover {
 
 @keyframes show {
   from {
-    opacity: 0;
-    transform: scale(0.25);
+    opacity: 0%;
+    scale: 25%;
   }
   to {
     opacity: 1;
-    transform: scale(1);
+    scale: 100%;
   }
 }
 img,
