--- a/sass/global/_animaciones.scss
+++ b/sass/global/_animaciones.scss
@@ -39,12 +39,12 @@ main {
 // Keyframes para animación show
 @keyframes show {
   from {
-    opacity: 0;
-    transform: scale(0.25);
+    opacity: 0%;
+    scale: 25%;
   }
   to {
     opacity: 1;
-    transform: scale(1);
+    scale: 100%;
   }
 }
 
