recupero actualizacion estable preload + lazy

--- a/sass/global/_animaciones.scss
+++ b/sass/global/_animaciones.scss
@@ -39,7 +39,7 @@ main {
 // Keyframes para animación show
 @keyframes show {
   from {
-    opacity: 0%;
+    opacity: 0;
     scale: 25%;
   }
   to {
