--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ main iframe.mapa:hover {
 
 @keyframes show {
   from {
-    opacity: 0%;
+    opacity: 0;
     scale: 25%;
   }
   to {
@@ -88,32 +88,27 @@ iframe.mapa,
 }
 
 main.principal {
-  background: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0.5)),
-    url("../assets/img/background/1.webp");
+  background: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0.5)), url("../assets/img/background/1.webp");
   background-size: cover;
   background-position: center;
 }
 main.piano {
-  background: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0.5)),
-    url("../assets/img/background/1.webp");
+  background: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0.5)), url("../assets/img/background/1.webp");
   background-size: cover;
   background-position: center;
 }
 main.canto {
-  background: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0.5)),
-    url("../assets/img/background/4.webp");
+  background: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0.5)), url("../assets/img/background/4.webp");
   background-size: cover;
   background-position: center;
 }
 main.violin {
-  background: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0.5)),
-    url("../assets/img/background/3.webp");
+  background: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0.5)), url("../assets/img/background/3.webp");
   background-size: cover;
   background-position: center;
 }
 main.contacto {
-  background: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0.5)),
-    url("../assets/img/background/2.webp");
+  background: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0.5)), url("../assets/img/background/2.webp");
   background-size: cover;
   background-position: center;
 }
@@ -124,7 +119,7 @@ main#musica .divisor-2 .section4 a:hover,
 main.contacto .contenedor .section3 form button:hover,
 main.contacto .contenedor .section3 form input:hover,
 main.contacto .contenedor .section3 form textarea:hover,
-header a[aria-current="page"],
+header a[aria-current=page],
 .nav-link:hover {
   color: rgb(27, 26, 25);
 }
@@ -171,7 +166,7 @@ main#musica .divisor-2 .section4 a:hover,
 main.contacto .contenedor .section3 form button:hover,
 main.contacto .contenedor .section3 form input:hover,
 main.contacto .contenedor .section3 form textarea:hover,
-a[aria-current="page"],
+a[aria-current=page],
 .nav-link:hover {
   background-color: rgb(225, 202, 83);
 }
@@ -197,47 +192,27 @@ main#musica .divisor-2 .section4 a {
 }
 
 body.light-mode main.principal {
-  background: linear-gradient(
-      rgba(220, 220, 220, 0.9),
-      rgba(220, 220, 220, 0.5)
-    ),
-    url("../assets/img/background/1.webp");
+  background: linear-gradient(rgba(220, 220, 220, 0.9), rgba(220, 220, 220, 0.5)), url("../assets/img/background/1.webp");
   background-size: cover;
   background-position: center;
 }
 body.light-mode main.piano {
-  background: linear-gradient(
-      rgba(220, 220, 220, 0.9),
-      rgba(220, 220, 220, 0.5)
-    ),
-    url("../assets/img/background/1.webp");
+  background: linear-gradient(rgba(220, 220, 220, 0.9), rgba(220, 220, 220, 0.5)), url("../assets/img/background/1.webp");
   background-size: cover;
   background-position: center;
 }
 body.light-mode main.canto {
-  background: linear-gradient(
-      rgba(220, 220, 220, 0.9),
-      rgba(220, 220, 220, 0.5)
-    ),
-    url("../assets/img/background/4.webp");
+  background: linear-gradient(rgba(220, 220, 220, 0.9), rgba(220, 220, 220, 0.5)), url("../assets/img/background/4.webp");
   background-size: cover;
   background-position: center;
 }
 body.light-mode main.violin {
-  background: linear-gradient(
-      rgba(220, 220, 220, 0.9),
-      rgba(220, 220, 220, 0.5)
-    ),
-    url("../assets/img/background/3.webp");
+  background: linear-gradient(rgba(220, 220, 220, 0.9), rgba(220, 220, 220, 0.5)), url("../assets/img/background/3.webp");
   background-size: cover;
   background-position: center;
 }
 body.light-mode main.contacto {
-  background: linear-gradient(
-      rgba(220, 220, 220, 0.9),
-      rgba(220, 220, 220, 0.5)
-    ),
-    url("../assets/img/background/2.webp");
+  background: linear-gradient(rgba(220, 220, 220, 0.9), rgba(220, 220, 220, 0.5)), url("../assets/img/background/2.webp");
   background-size: cover;
   background-position: center;
 }
@@ -247,7 +222,7 @@ body.light-mode main#musica .divisor-2 .section4 a:hover,
 body.light-mode main.contacto .contenedor .section3 form button:hover,
 body.light-mode main.contacto .contenedor .section3 form input:hover,
 body.light-mode main.contacto .contenedor .section3 form textarea:hover,
-body.light-mode header a[aria-current="page"],
+body.light-mode header a[aria-current=page],
 body.light-mode .nav-link:hover {
   color: rgb(234, 234, 234);
 }
@@ -263,11 +238,7 @@ body.light-mode .main .section3 .divisor3 .mapa {
   border: solid 1px rgb(234, 234, 234);
 }
 body.light-mode main.contacto {
-  background: linear-gradient(
-      rgba(220, 220, 220, 0.9),
-      rgba(220, 220, 220, 0.5)
-    ),
-    url("../assets/img/background/2.webp");
+  background: linear-gradient(rgba(220, 220, 220, 0.9), rgba(220, 220, 220, 0.5)), url("../assets/img/background/2.webp");
   background-size: cover;
   background-position: center;
 }
@@ -298,7 +269,7 @@ body.light-mode main#musica .divisor-2 .section4 a:hover,
 body.light-mode main.contacto .contenedor .section3 form button:hover,
 body.light-mode main.contacto .contenedor .section3 form input:hover,
 body.light-mode main.contacto .contenedor .section3 form textarea:hover,
-body.light-mode a[aria-current="page"],
+body.light-mode a[aria-current=page],
 body.light-mode .nav-link:hover {
   background-color: rgb(83, 152, 225);
 }
@@ -428,7 +399,7 @@ header .navbar-nav a {
   text-align: center;
   margin: 0.2rem;
 }
-header .navbar-nav a[aria-current="page"] {
+header .navbar-nav a[aria-current=page] {
   pointer-events: none;
 }
 header .logo-2 {
@@ -722,15 +693,7 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
   .main .section3 .divisor1 {
     padding-top: 1rem;
   }
-  .main
-    .section3
-    .divisor2
-    .row
-    .card.col-lg-4.col-sm-12
-    .card
-    .row
-    .col-lg-12.col-sm-6
-    .card-img-top {
+  .main .section3 .divisor2 .row .card.col-lg-4.col-sm-12 .card .row .col-lg-12.col-sm-6 .card-img-top {
     max-width: 60%;
   }
   main.contacto .contenedor {
@@ -876,4 +839,4 @@ main.contacto .contenedor .section3 form .checkbox input#checkbox {
   main.contacto .contenedor .section3 form textarea {
     margin: auto;
   }
-} /*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=styles.css.map */
